--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: transparent;
     z-index: 1000;
     align-items: center;
     justify-content: center;
