--- a/style.css
+++ b/style.css
@@ -160,8 +160,25 @@ body {
 #colorPicker {
     width: 100%;
     height: 40px;
+    min-height: 40px;
+    max-height: 40px;
     border: 2px solid #808080;
+    border-radius: 0;
     cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#colorPicker::-webkit-color-swatch-wrapper {
+    padding: 0;
+    border-radius: 0;
+}
+
+#colorPicker::-webkit-color-swatch {
+    border: none;
+    border-radius: 0;
 }
 
 .zoom-controls {
@@ -303,6 +320,13 @@ body {
     transform: translate(-50%, -50%);
     display: none;
     z-index: 10;
+}
+
+@media (hover: none) and (pointer: coarse) {
+    /* Hide cursor indicator on touch devices */
+    .cursor-indicator {
+        display: none !important;
+    }
 }
 
 .cursor-indicator.visible {
